# survival-of-the-fittest

./: .gitignore  README.md  THOUGHTS.md  pyproject.toml
backend/: __init__.py  main.py
backend/api/routes/: analytics.py  betting.py  creatures.py  fights.py  health.py  simulation.py  ws.py
backend/core/: config.py  logging.py
backend/db/: __init__.py  models.py  session.py
backend/fight/: behavior_tree.py  engine.py  genetic.py
backend/graphs/: commentary.py  creature_factory.py  evolution.py  rival.py  state.py
backend/graphs/nodes/: __init__.py  concept_generator.py  counter_logic.py  db.py  gemini.py  stat_generator.py  tts.py  validators.py
backend/simulation/: engine.py
backend/ws/: manager.py
frontend/: package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: app.css  app.html  env.ts
frontend/src/lib/: theme.ts
frontend/src/lib/api/: client.ts  ws.ts
frontend/src/lib/components/: Arena.svelte
frontend/src/lib/pixi/: animator.ts  arena.ts  particles.ts  physics.ts  sprite.ts
frontend/src/lib/schemas/: commentary.ts  creature.ts  fight.ts  ws.ts
frontend/src/lib/stores/: bet.ts  commentary.ts  fight.ts  leaderboard.ts  votes.ts
frontend/src/routes/: +layout.svelte  +page.svelte
frontend/src/routes/analytics/: +page.svelte
tests/: conftest.py  test_commentary.py  test_creature_generation.py  test_evolution.py  test_fight_engine.py  test_graph1_nodes.py  test_health.py  test_rival.py  test_simulation.py  test_simulation_engine.py  test_token_rewards.py  test_tts_node.py
(+4 files in other folders)
