[project]
name = "survival-of-the-fittest"
version = "0.1.0"
description = "Autonomous evolution simulation backend and frontend"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
	"fastapi>=0.116.0",
	"httpx>=0.28.0",
	"loguru>=0.7.3",
	"orjson>=3.11.0",
	"pydantic-settings>=2.11.0",
	"python-dotenv>=1.1.1",
	"shortuuid>=1.0.13",
	"sqlmodel>=0.0.24",
	"transitions>=0.9.3",
	"uvicorn>=0.35.0",
]

[project.optional-dependencies]
ai = [
	"cartesia>=1.0.6",
	"duckdb>=1.3.2",
	"google-generativeai>=0.8.5",
	"langgraph>=0.6.6",
]
dev = [
	"pytest>=8.4.1",
	"pytest-asyncio>=1.2.0",
	"ruff>=0.12.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.ruff.format]
quote-style = "double"
